--- a/css/basic.css
+++ b/css/basic.css
@@ -1,5 +1,5 @@
 /* Denna fil får du editera för att lösa uppgiften. Du får INTE ändra i html-filen. */
-h1 {
+#maincontent h1 {
     letter-spacing:1px;
     font-weight:normal;
     margin-left:10px;
@@ -52,8 +52,34 @@ a:hover {
     margin-left:10px;
     margin-right:10px;
 }
+#subcontent h1 {
+    font-size:17px;
+    font-weight:normal;
+    color:#51473D;
+    margin-left:10px;
+    margin-bottom:20px;
+}
+#subcontent h2 {
+    font-family: "Verdana" sans-serif;
+    margin-left:10px;
+    margin-bottom:0;
+    font-size:14px;
+    font-weight:normal;
+}
+#subcontent ul {
+    margin-left:10px;
+}
+#subcontent p {
+    font-family: "Verdana";
+    font-size:9px;
+    line-height:20px;
+    width:180px;
+    margin-left:10px;
+    
+}
+/* Övergripande laypout börjar */
 #container {
-    width: 700px;
+    width: 580px;
     margin-left:auto;
     margin-right:auto;
     background:#EAE7D2;
@@ -71,17 +97,21 @@ a:hover {
 #menu {
     background:#51473D;
     float:left;
-    width: 700px;
+    width:580px;
 }
 #maincontent {
     float:left;
-    width:400px;
+    width:360px;
     color:#797066;
 }
 #subcontent {
     float:right;
-    width:300px;
+    width:200px;
     color:#797066;
+    margin-top:25px;
+    border-left-style:dashed;
+    border-left-width:1px;
+    border-left-color:#C0C0C0;
 }
 #bottomcontent {
     clear:both;
@@ -95,4 +125,5 @@ a:hover {
 .active a{
     background:#EAE7D2;
 }
+/* Övergripande laypout slutar */
 
