--- a/css/basic.css
+++ b/css/basic.css
@@ -17,7 +17,17 @@ a {
     font-size:12px;
     color:#51473D;
 }
-#menu li a {
+div > a:first-child{
+    display:block;
+    background: url("pics/coffey.jpg");
+    background-size:contain;
+    background-repeat:no-repeat;
+    overflow:hidden;
+    color: transparent;
+    width:580px;
+    height:200px;
+}
+#menu li a{
     float:left;
     width:100px;
     line-height:30px;
@@ -27,6 +37,9 @@ a {
     margin:0.5px;
     color:#EAE7D2;
     text-transform: capitalize;
+}
+#menu li a:hover {
+    background:#9C9084;
 }
 #menu li {
     margin-left:10px;
@@ -39,10 +52,8 @@ a {
     background:#9C9084;
     color:#EAE7D2;
 }
-#menu a:hover {
-    background:#9C9084;
-}
-a:hover {
+
+#subcontent a:hover {
     background:#9C9084;
 }
 #maincontent p {
